# ThirdParty-Mumps

./: .gitattributes  .gitignore  INSTALL.MUMPS  Makefile.am  Makefile.in  README.md  coinmumps-uninstalled.pc.in  coinmumps.pc.in  config.h.in  configure  configure.ac  get.Mumps  index.md  metis_adapter.c  mumps-uninstalled.pc.in  mumps.patch  mumps.pc.in  mumps_4.7.3.Win.patch  mumps_compat.h.in  mumps_dump.patch  mumps_int_def.h.in  mumps_mpi.patch
stable/1.0/: INSTALL.MUMPS  configure
trunk/: Makefile.in  configure  configure.ac  get.Mumps
